adicionado imagens e tailwindcli

--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
       font-family: 'Ribeye','Playfair Display', serif;
     }
    </style> 
+   <link rel="stylesheet" href="index.css">
   <script type="importmap">
 {
   "imports": {
